css/style.css
@import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&display=swap);

:root {
    --color-background: #131415;
    --color-primary: #FFA400;
    --color-secondary: #FC2933;
    --color-text: #FFFFFF;
    --color-shadow: rgba(1, 2, 7, 0.5);
    --color-border: #000;
    --color-card: #252525;
    --color-gradient: linear-gradient(98.81deg, #FFA100 -0.82%, #FF005C 101.53%);
    --main-font: Montserrat, sans-serif;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
    list-style: none;
    color: var(--color-text);
    font-family: var(--main-font);
}

body {
    background-color: var(--color-background);
}

main {
    width: 90%;
    margin: auto;
}

/* HERO SECTION */

section#hero {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    gap: 25px;
  }

#hero .hero {
    display: flex;
    align-items: stretch;
    justify-content: space-between;
  }
  
  #hero .hero-info {
    display: flex;
    flex-direction: column;
    width: 50%;
    gap: 30px;
    padding: 35px 0;
  }
  
  .hero-info h1 {
    font-size: 66px;
    font-weight: 700;
  }
  
  .hero-info span {
    font-size: 51px;
  }
  
  .hero-info p {
    font-size: 21px;
    font-weight: 400;
  }
  
  .hero-info button {
    font-size: 14px;
    font-weight: 700;
    color: var(--color-text);
    border: none;
    border-radius: 15px;
    background-image: var(--color-gradient);
    width: 165px;
    height: 50px;
    cursor: pointer;
  }

  #hero .hero-img {
    width: 50%;
    position: relative;
  }

.hero-img .img-left {
    position: absolute;
    right: 220px;
    top: 60px;
}
  
.hero-img .img-right {
    position: absolute;
    right: 0px;
    top: 35px;
}

#hero h2 {
    align-self: flex-start;
    font-size: 22px;
    font-weight: 500;
}

#hero .recommend {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    align-items: center;
    gap: 40px;
    padding-bottom: 30px;
}

.recommend .reco-card {
    width: 350px;
    height: 110px;
    background-color: var(--color-card);
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-radius: 15px;
    padding: 20px 15px;
    box-shadow: 0px 0px 50px var(--color-shadow);
}

.reco-card img {
    /* width: 62px; */
    height: 100%;
}

.reco-card .reco-info {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
} 

.reco-card .pizza-name {
    font-size: 15px;
    font-weight: 500;
}

.reco-card .pizza-info {
    font-size: 14px;
    font-weight: 400;
    color: rgba(255, 255, 255, 0.5);
}

.reco-card .pizza-price {
    background-image: var(--color-gradient);
    background-clip: text;
      -webkit-background-clip: text;
    color: transparent;
    font-size: 19px;
    font-weight: 700;  
}

.reco-card .cart-add {
    width: 85px;
    height: 29px;
    border-radius: 15px;
    border: none;
    background-image: var(--color-gradient);
    font-weight: 600;
    cursor: pointer;
  }
  

/* SECCIÓN CATEGORÍAS */

.categorias {
    width: 100%;
}
.categorias-title {
    padding: 20px 0;
    font-size: 15px;
}
.categorias-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 3%;
}
.categorias-card {
    width: 100%;
    min-width: 147px;
    max-width: 200px;
    height: 171px;
    margin-bottom: 20px;
    padding: 1rem;
    background-color: var(--color-card);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    border-radius: 1rem;
    box-shadow: 0px 0px 50px var(--color-shadow);
    border: 1px solid var(--color-border);
    transition: transform .3s;
    cursor: pointer;
}
.categorias-card:hover {
    transform: scale(1.1);
    border: 1px solid var(--color-primary);
    box-shadow: 0px 0px 15px var(--color-primary);
}
.categorias-card__img {
    width: 100%;
    height: 75px;
    text-align: center;
    background-position: center;
    background-repeat: no-repeat;
}
.categorias-card:nth-child(1) .categorias-card__img{
    background-image: url("../assets/img/pizza-card.png");
}
.categorias-card:nth-child(2) .categorias-card__img{
    background-image: url("../assets/img/burger-card.png");
}
.categorias-card:nth-child(3) .categorias-card__img{
    background-image: url("../assets/img/papitas-card.png");
}
.categorias-card:nth-child(4) .categorias-card__img{
    background-image: url("../assets/img/pizza2.png");
}
.categorias-card:nth-child(5) .categorias-card__img{
    background-image: url("../assets/img/buritto-card.png");
}
.categorias-card:nth-child(6) .categorias-card__img{
    background-image: url("../assets/img/taco-card.png");
}
.categorias-card:nth-child(7) .categorias-card__img{
    background-image: url("../assets/img/float-card.png");
}
.categorias-card__img img {
    width: 71px;
    height: 71px;
    backdrop-filter: blur(3px);

}
.categorias-card__info--title {
    font-size: 1rem;
    font-weight: normal;
}
.categorias-card__info--line {
    width: 24px;
    height: 4px;
    margin: 1rem auto;
    background: var(--color-gradient);
    border-radius: 1rem;
}

/* FIN SECCIÓN CATEGORÍAS */

